<resources>
    <string name="app_name">android_remote_control_client</string>
    <string name="rot_left">rotate left</string>
    <string name="rot_right">rotate right</string>
    <string name="mv_fw">move forward</string>
    <string name="mv_bw">move backward</string>
    <string name="dummy_string">relleno</string>
    <string name="head_lights">luces de cruze</string>
    <string name="turn_signal_left">intermitente izquierdo</string>
    <string name="turn_signal_right">intermitente derecho</string>
    <string name="hazard_lights">señales de emergencia</string>
    <string name="claxon">claxon</string>
    <string name="txt_lbl_servidor">Servidor:</string>
</resources>
